<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.GameInfoActivity"
    android:background="@drawable/main_background"
    >
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hor5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hor12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vert10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vert90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9"
        />

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hor5"
        app:layout_constraintBottom_toTopOf="@id/hor12"
        android:src="@drawable/icon_back"
        android:layout_marginStart="20dp"
        />

    <TextView
        android:id="@+id/tvScreenName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnBack"
        app:layout_constraintBottom_toBottomOf="@id/btnBack"
        android:textColor="@color/text_color"
        android:text="@string/info"
        android:textSize="35sp"
        android:fontFamily="@font/lemon_regular"
        />

    <TextView
        android:id="@+id/tvDot1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/vert10"
        app:layout_constraintTop_toTopOf="@id/tvText1"
        android:textColor="@color/text_color"
        android:text="@string/dot"
        android:textSize="15sp"
        android:fontFamily="@font/lemon_regular"
        />

    <TextView
        android:id="@+id/tvText1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tvDot1"
        app:layout_constraintEnd_toStartOf="@id/vert90"
        app:layout_constraintTop_toBottomOf="@id/tvScreenName"
        app:layout_constraintBottom_toTopOf="@id/tvText2"
        android:layout_marginStart="15dp"
        android:textColor="@color/text_color"
        android:text="@string/info_txt1"
        android:textSize="15sp"
        android:fontFamily="@font/lemon_regular"
        />
    <TextView
        android:id="@+id/tvDot2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/vert10"
        app:layout_constraintTop_toTopOf="@id/tvText2"
        android:textColor="@color/text_color"
        android:text="@string/dot"
        android:textSize="15sp"
        android:fontFamily="@font/lemon_regular"
        />

    <TextView
        android:id="@+id/tvText2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tvDot1"
        app:layout_constraintEnd_toStartOf="@id/vert90"
        app:layout_constraintTop_toBottomOf="@id/tvText1"
        app:layout_constraintBottom_toTopOf="@id/tvText3"
        android:layout_marginStart="15dp"
        android:textColor="@color/text_color"
        android:text="@string/info_txt2"
        android:textSize="15sp"
        android:fontFamily="@font/lemon_regular"
        />
    <TextView
        android:id="@+id/tvDot3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/vert10"
        app:layout_constraintTop_toTopOf="@id/tvText3"
        android:textColor="@color/text_color"
        android:text="@string/dot"
        android:textSize="15sp"
        android:fontFamily="@font/lemon_regular"
        />

    <TextView
        android:id="@+id/tvText3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tvDot1"
        app:layout_constraintEnd_toStartOf="@id/vert90"
        app:layout_constraintTop_toBottomOf="@id/tvText2"
        app:layout_constraintBottom_toTopOf="@id/tvDot4"
        android:layout_marginStart="15dp"
        android:textColor="@color/text_color"
        android:text="@string/info_txt3"
        android:textSize="15sp"
        android:fontFamily="@font/lemon_regular"
        />
    <TextView
        android:id="@+id/tvDot4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/vert10"
        app:layout_constraintTop_toTopOf="@id/tvText4"
        android:textColor="@color/text_color"
        android:text="@string/dot"
        android:textSize="15sp"
        android:fontFamily="@font/lemon_regular"
        />

    <TextView
        android:id="@+id/tvText4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tvDot1"
        app:layout_constraintEnd_toStartOf="@id/vert90"
        app:layout_constraintTop_toBottomOf="@id/tvText3"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="15dp"
        android:textColor="@color/text_color"
        android:text="@string/info_txt4"
        android:textSize="15sp"
        android:fontFamily="@font/lemon_regular"
        />

</androidx.constraintlayout.widget.ConstraintLayout>